--- a/app/src/main/res/layout/activity_bank.xml
+++ b/app/src/main/res/layout/activity_bank.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
+    android:id="@+id/coordinatorLayout_bank"
     tools:context=".BankActivity"
     tools:layout_editor_absoluteY="25dp">
 
@@ -12,10 +13,10 @@
         android:id="@+id/headingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/orbitron_medium"
         android:text="Welcome to Coinz Bank"
         android:textColor="@color/white"
@@ -31,10 +32,10 @@
         android:id="@+id/subheadingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/orbitron"
         android:text="Today's Rates Are: "
         android:textColor="@color/white"
@@ -100,36 +101,35 @@
 
 
     <Spinner
-        android:theme="@style/mySpinnerItemStyle"
         android:id="@+id/walletSpinner"
         android:layout_width="268dp"
         android:layout_height="56dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:dropDownWidth="match_parent"
         android:popupBackground="@color/gray"
         android:textColor="@color/silver"
+        android:theme="@style/mySpinnerItemStyle"
         app:fontFamily="@font/pt_mono"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintVertical_bias="0.635" />
 
     <Button
         android:id="@+id/transferBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/pt_mono"
         android:text="Transfer"
-        app:backgroundTint="@android:color/holo_red_dark"
+        android:backgroundTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bankBtn"
         app:layout_constraintHorizontal_bias="0.5"
@@ -141,13 +141,13 @@
         android:id="@+id/bankBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/pt_mono"
         android:text="Bank"
-        app:backgroundTint="@android:color/holo_red_dark"
+        android:backgroundTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -159,8 +159,8 @@
         android:id="@+id/tv_back_to_map"
         style="@style/viewCustom"
         android:layout_below="@id/btn_login"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="sans-serif-smallcaps"
