--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -4,19 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
+    android:id="@+id/coordinatorLayout_forgot_password"
     tools:context=".ForgottenPasswordActivity">
 
     <EditText
         android:id="@+id/et_email"
         style="@style/viewCustom"
         android:ems="10"
+        android:fontFamily="@font/orbitron"
         android:hint="Email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColor="@android:color/white" />
+
     <Button
         android:id="@+id/btn_submit"
         style="@style/viewCustom"
         android:layout_below="@id/et_email"
-        android:background="@color/colorAccent"
+        android:background="@android:color/holo_red_dark"
+        android:fontFamily="@font/orbitron"
         android:text="@string/send_email_to_reset_password"
         android:textColor="@android:color/white"
         android:textStyle="bold" />
