--- a/app/src/main/res/layout/spinner_dropdown_layout.xml
+++ b/app/src/main/res/layout/spinner_dropdown_layout.xml
@@ -5,5 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:ellipsize="marquee"
-    android:textColor="#aa66cc"
+    android:textColor="@color/white"
+    android:fontFamily="@font/pt_mono"
     android:singleLine="true" />
