--- a/app/src/main/res/layout/spinner_layout.xml
+++ b/app/src/main/res/layout/spinner_layout.xml
@@ -3,5 +3,5 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
-    android:textColor="#ff0000" />
+    android:textColor="@color/white"
+    android:fontFamily="@font/pt_mono"/>
