Finished UI/Design elements, cleaned up code-- only comments left, and espresso tests

--- a/app/src/main/res/layout/activity_bank.xml
+++ b/app/src/main/res/layout/activity_bank.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/orbitron_medium"
-        android:text="Welcome to Coinz Bank"
+        android:text="@string/welcome_to_coinz_bank"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/orbitron"
-        android:text="Today's Rates Are: "
+        android:text="@string/today_s_rates_are"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:fontFamily="@font/pt_mono"
-        android:text="SHIL"
+        android:text="@string/shil_CAPS"
         android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/DOLRText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:fontFamily="@font/pt_mono"
-        android:text="DOLR"
+        android:text="@string/dolr_CAPS"
         android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/QUIDText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/pt_mono"
-        android:text="QUID"
+        android:text="@string/quid_CAPS"
         android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/PENYText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/pt_mono"
-        android:text="PENY"
+        android:text="@string/peny_CAPS"
         android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/walletSpinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +128,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/pt_mono"
-        android:text="Transfer"
+        android:text="@string/transfer"
         android:backgroundTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bankBtn"
@@ -146,7 +146,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/pt_mono"
-        android:text="Bank"
+        android:text="@string/bank"
         android:backgroundTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -165,7 +165,7 @@
         android:focusable="true"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center_horizontal"
-        android:text="Back to Map"
+        android:text="@string/back_to_map"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
