--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:background="@android:color/holo_red_dark"
         android:fontFamily="@font/orbitron"
-        android:text="Start"
+        android:text="@string/start"
         app:layout_constraintBottom_toTopOf="@+id/subText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/orbitron"
-        android:text="Welcome to Coinz!"
+        android:text="@string/welcome_to_coinz"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/startButton"
@@ -43,7 +43,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/orbitron"
-        android:text="Press start to play"
+        android:text="@string/press_start_to_play"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
