--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/pt_mono"
-        android:text="Welcome back, [name]!"
+        android:text="@string/welcome_back_name"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/userEmailText"
@@ -32,7 +32,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/pt_mono"
-        android:text="[email]"
+        android:text="@string/email_SBR"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/goldText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/pt_mono"
-        android:text="GOLD: "
+        android:text="@string/gold"
         android:textColor="@android:color/holo_orange_light"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,7 +61,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/orbitron_medium"
-        android:text="Coinz"
+        android:text="@string/coinz"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/userText"
@@ -79,8 +79,8 @@
         android:focusable="true"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center_horizontal"
-        android:text="Back to Map"
-        android:textColor="@android:color/black"
+        android:text="@string/back_to_map"
+        android:textColor="@android:color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
         android:focusable="true"
         android:fontFamily="@font/orbitron"
         android:gravity="center_horizontal"
-        android:text="Sign Out"
+        android:text="@string/sign_out"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -124,6 +124,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.278"
-        app:srcCompat="@drawable/pixelcoin" />
+        app:srcCompat="@drawable/pixelcoin"
+        android:contentDescription="@string/coin_desc" />
 
 </android.support.constraint.ConstraintLayout>
