--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,7 @@
         style="@style/viewCustom"
         android:ems="10"
         android:fontFamily="@font/orbitron"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textColor="@android:color/white" />
 
@@ -24,7 +23,7 @@
         android:layout_below="@id/et_email"
         android:ems="10"
         android:fontFamily="@font/orbitron"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="@android:color/white" />
 
@@ -45,9 +44,10 @@
         android:clickable="true"
         android:fontFamily="@font/orbitron"
         android:gravity="center_horizontal"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         android:textColor="@android:color/white"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:focusable="true" />
 
     <Button
         android:id="@+id/btn_register_account"
