--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -14,7 +14,8 @@
         android:fontFamily="@font/orbitron"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        tools:ignore="Autofill" />
 
     <Button
         android:id="@+id/btn_submit"
