--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +16,8 @@
         android:fontFamily="@font/orbitron"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        tools:ignore="Autofill" />
 
     <EditText
         android:id="@+id/et_password"
@@ -25,7 +27,8 @@
         android:fontFamily="@font/orbitron"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        tools:ignore="Autofill" />
 
     <Button
         android:id="@+id/btn_login"
